# bt_record

./: .gitignore  README.md  agent.md  config.yaml  pyproject.toml
bt_record/: __init__.py  app.py  cli.py  config.py  constants.py  device_formats.py  encoder_app.py  encoder_controller.py  errors.py  gst_controller.py  main.py  pipeline.py  record_app.py  record_controller.py
bt_record/scripts/: install-system-deps.sh
bt_record/static/: encoder.html  index.html  record.html
docs/: milestone-1-startup-boundary.md  milestone-2-config-cli.md  milestone-3-pipeline-builder.md  milestone-plan.md  requirements.md
tests/: test_config_cli.py  test_controller_pipeline_wiring.py  test_device_formats.py  test_packaging.py  test_pipeline_builder.py  test_startup_boundary.py
