[project]
name = "bt-record"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "pycairo>=1.29.0",
    "pygobject>=3.56.3",
    "uvicorn>=0.49.0",
]

[project.scripts]
bt-record = "bt_record.app:main"

[tool.setuptools.package-data]
bt_record = ["static/*.html"]
