[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bt-record"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "loguru>=0.7.3",
    "pycairo>=1.29.0",
    "pygobject>=3.56.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
]

[project.scripts]
bt-gst-record = "bt_record.main:main"

[tool.setuptools.package-data]
bt_record = ["static/*.html", "scripts/*.sh"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bt_record*"]
